# $Id$

Griffith ChangeLog
------------------
(c) 2005-2008  Vasco Nunes, Piotr Ożarowski


2008-11-01  Michael Jahn
	* updated IMDB plugin

2008-10-26  Michael Jahn
	* [#179618] During "Get from Web ", griffith window keeps stealing focus

2008-10-23  Michael Jahn
	* PDF export: disabled movie grouping if movie list is not sorted by title or original title
	* [#258817] The application doesn't save volume

2008-10-25  Piotr Ożarowski
	* add load/save search conditions

2008-10-23  Michael Jahn
	* updated IMDB-de, Kino.de, Zelluloid plugin
	* added original url check within plugin test

2008-10-23  Piotr Ożarowski
	* clean/restore search conditions in advfilter

2008-10-19  Piotr Ożarowski
	* Add more filter movie rules to the search window
	* Screenplay and cameraman added to main/add windows

2008-10-18  Piotr Ożarowski
	* Speed up import movies function

2008-09-23  Michael Jahn
	* [#273172] "Properties/Volume/show...in this volume" is broken

2008-09-14  Piotr Ożarowski
	* Warn about backups when starting develpement version
	* seen/loaned settings available in adv. filter window (much more to come soon)

2008-09-13  Piotr Ożarowski
	* Loaning movies is working again

2008-09-12  Piotr Ożarowski
	* Validate loan contact's email address
	* Python required version bumped to 2.4 (it was required for a while aready)
	* Use SQLAlchemy's validate decorator (minimum required SA version bumped to 0.5rc1)

2008-09-09  Piotr Ożarowski
	* Add aspect ratio, cameraman and screenplay to the database

2008-08-16  Michael Jahn
	* fixed support for german umlauts in OFDb plugin
	* added Amazon plugin (supports search by UPC/EAN)
	* added Amazon language support for CA and FR
	* Amazon support is now closer to the current specification
	* encoding error in plugins Kino.de and Zelluloid

2008-08-14  Michael Jahn
	* pdf export: group movies with numbers 0-9 (thanks to Luigi Pantano)
	* pdf export: [#174463] Database Export as PDF doesn't work under Ubuntu
